force-app/main/default/objects/Activity/fields/DoxeePecSendResult__c.field-meta.xml
<CustomField>
    <fullName>DoxeePecSendResult__c</fullName>
    <description>Esito invio della PEC restituito da Doxee.</description>
    <label>Esito PEC</label>
    <length>50</length>
    <type>Text</type>
</CustomField>