force-app/main/default/objects/Activity/fields/DoxeePecTemplate__c.field-meta.xml
<CustomField>
    <fullName>DoxeePecTemplate__c</fullName>
    <description>Nome descrittivo del template PEC definito lato Doxee.</description>
    <label>Template PEC Doxee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comunicazione Forte Consumo (23)</fullName>
            </value>
            <value>
                <fullName>Comunicazione Fuga Accertata (24)</fullName>
            </value>
            <value>
                <fullName>Comunicazione Fuga Presunta (25)</fullName>
            </value>
            <value>
                <fullName>Ultimo Avviso (26)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>