force-app/main/default/objects/Activity/fields/IsPec__c.field-meta.xml
<CustomField>
    <fullName>IsPec__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag valorizzato a Y dalla action &quot;Invio PEC&quot;</description>
    <label>PEC</label>
    <type>Checkbox</type>
</CustomField>