force-app/main/default/objects/Activity/fields/PhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>PhoneNumber__c</fullName>
    <description>Valorizzato con il numero di telefono inserito manualmente dall&apos;utente nel widget di composizione dell&apos;SMS, o in mancanza di esso con il ContactPointPhone primario del Contact selezionato nel widget.</description>
    <label>Telefono Alternativo</label>
    <type>Phone</type>
</CustomField>