force-app/main/default/objects/Activity/fields/UserTag1__c.field-meta.xml
<CustomField>
    <fullName>UserTag1__c</fullName>
    <description>User Tag per variabili dinamiche notifiche SOL</description>
    <label>User Tag 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>